--- a/style/style.css
+++ b/style/style.css
@@ -563,11 +563,12 @@ header nav ul li a {
 .images {
     text-align: center;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .images img {
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
 }
 
 .description {
@@ -596,6 +597,23 @@ header nav ul li a {
     opacity: 1;
     cursor: pointer;
     background-color: #000;
+}
+
+.gallery-button {
+    border-radius: 20px;
+    background-color: rgb(184, 139, 88);
+    border: 1px solid rgb(184, 139, 88);
+    width: 194px;
+    height: 45px;
+    font-size: 12px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    padding: 0;
 }
 
 .logos {
