--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ header nav ul li a {
     text-align: left;
 }
 
-.line:after {
+.line::after {
     content: '';
     display: block;
     visibility: hidden;
@@ -518,6 +518,7 @@ header nav ul li a {
     padding: 0;
     width: 714px;
     text-align: center;
+    margin-bottom: 40px;
 }
 
 .our-project nav ul {
@@ -546,35 +547,61 @@ header nav ul li a {
     width: 115px;
 }
 
-.project_link::before {
+.project-list {
+    display: inline-block;
+    font-size: 14px;
+    padding: 0;
+    margin: 0 auto;
+}
+
+.our-line::after {
+    content: '';
+    display: block;
+    visibility: hidden;
+    position: relative;
+    top: 20px;
+    margin: 0 auto;
+    height: 5px;
+    background-color: #b88b58;
+    padding-right: 10px;
+    width: 60%;
+}
+
+.project-list:hover .our-line::after {
+    visibility: visible;
+}
+
+.project-link::before {
     content: '';
     display: block;
     width: 1px;
-    height: 58px;
+    height: 61px;
     background-color: #bebebe;
     position: absolute;
     top: 2005px;
 }
 
-.project_link::after {
-    content: '';
-}
-
 .images {
     text-align: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
 }
 
 .images img {
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    height: 95%;
 }
 
 .description {
+    position: absolute;
+    top: 180px;
+    left: 0;
+    width: 95%;
+    height: 95%;
+    margin: 0;
+    padding: 0;
     opacity: 0;
-    width: 100%;
-    height: 100%;
 }
 
 .description h3 {
@@ -594,9 +621,9 @@ header nav ul li a {
 }
 
 .images:hover .description {
-    opacity: 1;
+    background-color: rgba(0, 0, 0, .5);
     cursor: pointer;
-    background-color: #000;
+    opacity: 1;
 }
 
 .gallery-button {
@@ -614,6 +641,7 @@ header nav ul li a {
     display: block;
     margin: 0 auto;
     padding: 0;
+    margin-bottom: 60px;
 }
 
 .logos {
