--- a/style/style.css
+++ b/style/style.css
@@ -1102,3 +1102,105 @@ header nav ul li a {
     background-color: #000;
     border: none;
 }
+
+.some-facts {
+    background-color: #000;
+}
+
+.some-facts h2 {
+    font-size: 30px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 10px;
+    margin: 0;
+}
+
+.some-facts h3 {
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: #c7c7c7;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+
+.facts-numbers {
+    text-align: center;
+}
+
+.facts-number {
+    font-size: 48px;
+    font-family: "Montserrat";
+    color: rgb(184, 139, 88);
+    font-weight: bold;
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    padding: 0;
+}
+
+.facts-number::after {
+    content: '';
+    width: 30px;
+    height: 3px;
+    background-color: #7e7e7e;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 5px;
+    margin-left: calc(50% - 10px)
+}
+
+.facts-type {
+    font-size: 18px;
+    font-family: "Montserrat";
+    color: #fff;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+}
+
+.facts-paragraph {
+    font-size: 12px;
+    font-family: "Montserrat";
+    color: rgb(126, 126, 126);
+    text-align: center;
+    margin-bottom: 60px;
+    width: 65%;
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 60px;
+}
+
+.share-image {
+    margin-top: 20px;
+}
+
+.share-image p {
+    display: inline;
+    position: absolute;
+    right: 778px;
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(174, 174, 174);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: left;
+}
+
+.share-image img {
+    margin: 10px 340px;
+    padding: 0;
+}
+
+.share-icons fa {
+    display: inline;
+}
