--- a/style/style.css
+++ b/style/style.css
@@ -1421,9 +1421,125 @@ header nav ul li a {
 }
 
 .adress-element {
-    margin-left: 100px;
+    margin-left: 150px;
     border-radius: 3px;
     background-color: rgb(255, 255, 255);
     width: 540px;
     height: 343px;
+}
+
+.section-footer {
+    background-color: #000;
+    padding-bottom: 20px;
+}
+
+.fa-icon-dark {
+    border-radius: 50%;
+    background-color: rgb(55, 55, 55);
+    width: 33px;
+    height: 33px;
+    color: #fff;
+    margin-top: 30px;
+    font-size: 14px;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.fa-icon-dark:hover {
+    background-color: #b88b58;
+}
+
+.footer-icons {
+    margin-left: 150px;
+    padding: 0;
+}
+
+.footer-copy {
+    font-size: 14px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    text-align: left;
+    margin-top: 120px;
+    margin-left: 150px;
+}
+
+.footer-note {
+    font-size: 12px;
+    font-family: "Montserrat";
+    color: rgb(126, 126, 126);
+    text-align: left;
+    margin-top: 30px;
+}
+
+#email {
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    font-size: 13px;
+    line-height: 25px;
+    color: #9e9e9e;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 2px solid #aeaeae;
+    display: block;
+    margin: 0 auto;
+}
+
+#email:focus {
+    outline: none;
+    border-color: #b88b58;
+}
+
+.footer-newsletter {
+    border-radius: 3px;
+    background-color: #373737;
+    width: 280px;
+    height: 132px;
+    padding: 35px 35px 140px 35px;
+    margin-top: 30px;
+    margin-left: 80px;
+}
+
+.footer-button {
+    border-radius: 20px;
+    width: 194px;
+    height: 45px;
+    font-size: 12px;
+    font-family: "Montserrat";
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+    background-color: #b88b58;
+    border: none;
+    display: block;
+    margin: 0 auto;
+    transition: .2s;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
+.footer-button:hover {
+    transform: scale(1.2);
+}
+
+.round-up {
+    border-radius: 50%;
+    width: 65px;
+    height: 65px;
+    box-shadow: 0px 3px 8px 0px rgba(0, 0, 1, 0.24);
+    background-color: #b88b58;
+    display: block;
+    position: absolute;
+    top: 7100px;
+}
+
+.round-img {
+    display: block;
+    margin: 22px auto;
+}
+
+.round-up:hover {
+    background-color: #aeaeae;
 }
